--- a/ui/index.html
+++ b/ui/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>GameLegOS</title>
         <meta charset="utf-8" />
+        <link rel="stylesheet" href="main.css" />
     </head>
     <body>
         <div id="root"></div>
